--- a/cd/service.yml
+++ b/cd/service.yml
@@ -16,7 +16,7 @@ service:
                             gitFetchType: Branch
                             paths:
                                 - test-node-cd/cd/deployment.yaml
-                                - test-node-cd/cd/svc.yaml
+                                - test-node-cd/cd/svc.yml
                             repoName: test-node-cd
                             branch: main
                         skipResourceVersioning: false
