--- a/cd/service.yml
+++ b/cd/service.yml
@@ -15,8 +15,8 @@ service:
                             connectorRef: harnessgitconnector
                             gitFetchType: Branch
                             paths:
-                                - test-node-cd/cd/deployment.yml
-                                - test-node-cd/cd/svc.yml
+                                - cd/deployment.yml
+                                - cd/svc.yml
                             repoName: test-node-cd
                             branch: main
                         skipResourceVersioning: false
