--- a/cd/svc.yml
+++ b/cd/svc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test_node_cd_service
+  name: test-node-cd-service
 spec:
   ports:
   - port: 80
@@ -9,4 +9,4 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: test_node_cd_deployment
+    app: test-node-cd-deployment
